--- a/app/src/main/res/menu/menu_base.xml
+++ b/app/src/main/res/menu/menu_base.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/item1"
-        android:title="@string/app_name">
+        android:title="@string/home">
     </item>
     <item android:id="@+id/item2"
-        android:title="@string/app_name">
+        android:title="@string/settings">
     </item>
 
 </menu>
